--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,9 @@
   </nav>
   <!--End Mobile Navigation-->
 
-  <div style="height: 106.5%">
+
     <app-jumbotron></app-jumbotron>
-    <app-navbar></app-navbar>
+    <app-navbar sticky sticky-parent="true"></app-navbar>
     <router-outlet></router-outlet>
-  </div>
+
 </md-sidenav-container>
