--- a/src/app/reading-list/reading-list.component.html
+++ b/src/app/reading-list/reading-list.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12" *ngFor="let readItem of nonFiction">
-      <app-read-item-card [readItem]="readItem"></app-read-item-card>
+      <app-read-item-card [readItem]="readItem" [scrollBox]="scrollBox"></app-read-item-card>
     </div>
   </div>
   <hr>
@@ -31,7 +31,7 @@
   </div>
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12" *ngFor="let readItem of fiction">
-      <app-read-item-card [readItem]="readItem"></app-read-item-card>
+      <app-read-item-card [readItem]="readItem" [scrollBox]="scrollBox"></app-read-item-card>
     </div>
   </div>
   <hr>
@@ -45,7 +45,7 @@
   </div>
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12" *ngFor="let readItem of blog">
-      <app-read-item-card [readItem]="readItem"></app-read-item-card>
+      <app-read-item-card [readItem]="readItem" [scrollBox]="scrollBox"></app-read-item-card>
     </div>
   </div>
 </div>
