--- a/src/app/about/see-work-component/see-work-component.component.scss
+++ b/src/app/about/see-work-component/see-work-component.component.scss
@@ -1,8 +1,8 @@
 #build-better{
   background-attachment: initial;
-  background-image: url("/assets/images/build-better-bg.jpg");
   background-size: cover;
   background-position: center;
+  padding-top: 15px;
 }
 
 .icon-title{
@@ -15,11 +15,20 @@
   border-style: solid;
   border-width: .5px;
   width: 100%;
-  height: 15vw;
-  min-height: 180px;
+  padding-top: 100%;
+  height: 0;
 }
 
-.img-fluid {
+.link-icon {
   margin-top: -10px;
   max-width: 80%;
+  max-height: 60%;
+}
+
+.icon-button-contents {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
