--- a/src/app/navigation/jumbotron/jumbotron.component.scss
+++ b/src/app/navigation/jumbotron/jumbotron.component.scss
@@ -26,7 +26,7 @@
   }
 
   #jumbo-image {
-    background-image: url("/assets/images/bombe-1.png");
+    background-image: url("/assets/images/bombe-1.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
