--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -3,12 +3,16 @@
   <h2 class="md-toolbar-tools">smithdev.io</h2>
 </md-toolbar>
 <md-nav-list>
-  <a md-list-item href="google.com">
-    <md-icon md-list-icon>folder</md-icon>
-    <h3 md-line>blig!</h3>
-    <p md-line>
-      <span> blah  </span>
-      <span class="demo-2"> -- blarg? </span>
-    </p>
+  <a md-list-item  class="nav-link" routerLinkActive="active" routerLink="/home">
+    <md-icon md-list-icon>home</md-icon>
+    <h3 md-line>Home</h3>
+  </a>
+  <a md-list-item  class="nav-link" routerLinkActive="active" routerLink="/about">
+    <md-icon md-list-icon>person</md-icon>
+    <h3 md-line>About</h3>
+  </a>
+  <a md-list-item  class="nav-link" routerLinkActive="active" routerLink="/read">
+    <md-icon md-list-icon>book</md-icon>
+    <h3 md-line>Reading List</h3>
   </a>
 </md-nav-list>
