Fixing and updating various things. 2020 refresh

--- a/src/app/about/see-work-component/see-work-component.component.html
+++ b/src/app/about/see-work-component/see-work-component.component.html
@@ -22,44 +22,17 @@
         <h2 class="mat-display-2">
           Find me online.
         </h2>
-        <div class="row">
-          <div class="col-md-4 col-sm-6 col-6">
-            <a href="https://github.com/VivaLaPanda" style="width: 100%">
-              <button md-raised-button class="icon-button-dark">
-                <div class="icon-button-contents">
-                  <h2 class="icon-title">Github</h2>
-                  <img class="img-fluid link-icon non-lazy" src="/assets/images/github-mark.webp">
-                </div>
-              </button>
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6 col-6">
-            <a href="https://www.linkedin.com/in/smithdevio/" style="width: 100%">
-              <button md-raised-button class="icon-button-dark">
-                <div class="icon-button-contents">
-                  <h2 class="icon-title">LinkedIn</h2>
-                  <img class="img-fluid link-icon non-lazy" src="/assets/images/linkedin-black.webp">
-                </div>
-              </button>
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6 col-6">
-            <a href="https://twitter.com/adriansmithdev" style="width: 100%">
-              <button md-raised-button class="icon-button-dark">
-                <div class="icon-button-contents">
-                  <h2 class="icon-title">Twitter</h2>
-                  <img class="img-fluid link-icon non-lazy" src="/assets/images/twitter.webp">
-                </div>
-              </button>
-            </a>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-12">
-            <p>Or, if you prefer to get in touch with me directly, email me at <a href="mailto:adrian@smithdev.io"><span class="accent-text">adrian@smithdev.io</span></a>.</p>
-          </div>
-        </div>
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-dark"><a href="https://github.com/VivaLaPanda/" target="_blank">GitHub</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://stackoverflow.com/users/4951118/adrian-smith" target="_blank">Stack Overflow</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://twitter.com/_vivalapanda" target="_blank">Twitter</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://www.linkedin.com/in/smithdevio/" target="_blank">LinkedIn</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://kitsu.io/users/VivaLaPanda" target="_blank">Kitsu (Anime List)</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://www.lesswrong.com/users/vivalapanda" target="_blank">LessWrong 2.0</a></li>
+          <li class="list-group-item list-group-item-dark"><a href="https://steamcommunity.com/id/VivaLaPanda" target="_blank">Steam</a></li>
+          <li class="list-group-item list-group-item-dark">Discord: VivaLaPanda#6386</li>
+          <li class="list-group-item list-group-item-dark">Email: <a href="mailto:adrian@smithdev.io">adrian@smithdev.io</a></li>
+        </ul>
       </div>
     </div>
   </div>
