--- a/src/app/home/build-better-row/build-better-row.component.html
+++ b/src/app/home/build-better-row/build-better-row.component.html
@@ -23,18 +23,18 @@
           Building things <span class="accent-text">better.</span>
         </h2>
         <p class="mat-body-2">
-          I am a software developer and student living in Santa Rosa, CA.
+          I am a software developer living in Santa Rosa, CA.
         </p>
         <p class="mat-body-2">
           I have been programming since middle school, and still am just as enthralled as I was when I started.
           I love writing interesting software and getting to see the things I've made being useful out in the wild.
         </p>
         <p class="mat-body-2">
-          I primarily work doing full stack web development, however I also have significant experience in other
-          contexts. I have professional experience in desktop application development with C#/.NET and with Java.
+          I primarily work doing DevOps and Site Reliability Engineering, however I also have significant experience in web development.
+          I've worked professionally doing desktop application development with C#/.NET and Java, as well as several years experience with PHP and Angular development.
           I also have 2 years of experience doing research on Computer Vision with Python and Mathematica. In my
-          spare time I like to work with Golang on machine learning or automation projects, or on website projects
-          (like this one!)
+          spare time I like to work with GoLang on machine learning or automation projects, or on web projects
+          like this one!)
         </p>
       </div>
     </div>
