--- a/src/app/home/live-on-purpose-row/live-on-purpose-row.component.html
+++ b/src/app/home/live-on-purpose-row/live-on-purpose-row.component.html
@@ -29,9 +29,10 @@
         </p>
         <p class="mat-body-2">
           I participate in the <a href="https://www.gjopen.com/memberships/32814/scores">Good Judgement Open</a>
-          to practice making better calibrated predictions. I also spend a fair bit of time learning Japanese, and
-          see myself traveling to East Asia some time after I graduate from university. I'm always interested in learning
-          new things, so I often watch MIT OpenCourseware lectures on topics outside of what I study at school.
+          to practice making better calibrated predictions. I recently spent several months working in South East
+          Asia to try and gain some more varied perspectives on work and on life, and can only say that I'd highly
+          recommend the experience. I'm always interested in learning new things, so if you have a book/podcast
+          recommendation I'm always ready.
         </p>
       </div>
     </div>
