--- a/src/app/navigation/navbar/navbar.component.html
+++ b/src/app/navigation/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable navbar-inverse bg-faded transparent-navbar" style="margin-top: -3.2rem;" fxHide.xs>
+<nav class="navbar navbar-dark bg-faded transparent-navbar navbar-expand-lg" style="margin-top: -3.2rem;" fxHide.xs>
   <div class="navbar-brand" fxLayoutAlign=" center">
     <a>smithdev</a>
   </div>
@@ -12,6 +12,12 @@
       </li>
       <li class="nav-item" >
         <a class="nav-link" routerLinkActive="active" routerLink="/read">Reading List</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="https://medium.com/@vivalapanda" target="_blank">Blog</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="https://vivalapanda.moe/" target="_blank">Radio</a>
       </li>
       <!--TODO: Blog-->
       <!--<li class="nav-item">-->
