--- a/src/app/reading-list/read-item-card/read-item-card.component.html
+++ b/src/app/reading-list/read-item-card/read-item-card.component.html
@@ -6,8 +6,7 @@
   <img
     md-card-image
     [lazyLoad]="readItem.img"
-    [scrollTarget]="scrollBox"
-    class="img-fluid">
+    [scrollTarget]="scrollBox">
   <md-card-content>
     <p>
       {{readItem.tagline}}
