--- a/src/app/navigation/navbar/navbar.component.scss
+++ b/src/app/navigation/navbar/navbar.component.scss
@@ -10,7 +10,7 @@
     background-color: rgba(0, 0, 0, .5);
   }
 
-  .navbar-inverse .navbar-nav .nav-link:hover {
+  .navbar-dark .navbar-nav .nav-link:hover {
     color: mat-color($accent, A200)
   }
 }
